src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>C501_Household_Id__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Mailing_Address__c</fullName>
        <formula>MailingStreet + &apos;, &apos; + MailingCity + &apos; &apos; + MailingState + &apos; &apos; + MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Action__c</fullName>
        <label>Merge Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_Merge_Actions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence_From__c</fullName>
        <label>Merge Confidence From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence_To__c</fullName>
        <label>Merge Confidence To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Confidence__c</fullName>
        <label>Confidence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Contact__c</fullName>
        <label>Merge Contact</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Id__c</fullName>
        <label>Merge Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Metric_Name__c</fullName>
        <label>Rule</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Metric__c</fullName>
        <label>Merge Metric</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Rule__c</fullName>
        <label>Merge Rule</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Merge_Target__c</fullName>
        <label>Merge Target</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Other_Address__c</fullName>
        <formula>OtherStreet + &apos;, &apos; + OtherCity + &apos; &apos; + OtherState + &apos; &apos; + OtherPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Queer</fullName>
                </value>
                <value>
                    <fullName>Trans</fullName>
                </value>
                <value>
                    <fullName>Prefer not to disclose</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>